k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calendar-backend
  labels:
    app.kubernetes.io/part-of: calendar
    app.kubernetes.io/name: calendar-backend
    app.kubernetes.io/component: backend
