k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-backend
  namespace: calendar-backend
  labels:
    app: calendar-backend
    app.kubernetes.io/part-of: calendar
    app.kubernetes.io/name: calendar-backend
spec:
  type: ClusterIP
  selector:
    app: calendar-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
